# resid

./: CMakeLists.txt  GUIDE  envelope.h  extfilt.h  filter.h  sid.cc  sid.h  voice.h  wave.h
